--- a/.plans/C01-01.md
+++ b/.plans/C01-01.md
@@ -1,3 +1,21 @@
-# C01-01 — ADR 0002: Intent Handler Registration
+# C01-01 — Decide canonical REST controller location and naming
 
-Create `docs/adr/0002-intent-handler-registration.md` defining the single supported registration mechanism for intent handlers (recommended: `#[HandlesIntent(...)]` + container tag `intent.handler`), and document backward compatibility for `agentwp_intent_handlers` plus a deprecation path for legacy `getIntent()`/`getSupportedIntents()` discovery; include rationale, consequences, and a migration checklist; Acceptance Criteria: ADR clearly states the one true approach and how/when legacy support is removed.
+Confirm the canonical location/namespace for REST controllers (recommended: all controllers under `src/Rest/` in `AgentWP\\Rest`). Document the decision in `docs/ARCHITECTURE.md` and `docs/DEVELOPER.md` (how to add a new endpoint). Acceptance: there is exactly one 'blessed' place to add controllers and it is documented.
+
+---
+
+## Implementation Complete
+
+**Decision:** All REST controllers must be placed in `src/Rest/` with namespace `AgentWP\Rest`.
+
+**Documentation added:**
+
+1. **ARCHITECTURE.md** - Updated "Where Things Live" table to mark `src/Rest/` as the canonical location with emphasis.
+
+2. **DEVELOPER.md** - Added new section "Adding a new REST endpoint (core development)" with:
+   - Canonical location declaration (`src/Rest/`, `AgentWP\Rest` namespace)
+   - Note about legacy `src/API/` controllers
+   - Step-by-step guide for adding endpoints
+   - Controller conventions
+
+**Legacy note:** `HistoryController` and `ThemeController` remain in `src/API/` for now. The base `RestController` class also lives in `src/API/`. Documentation clarifies that new controllers must go in `src/Rest/`.
