--- a/.plans/C01-02.md
+++ b/.plans/C01-02.md
@@ -1,3 +1,3 @@
-# C01-02 — ADR 0003: Intent Classification Strategy
+# C01-02 — Move base REST controller to src/Rest and update namespaces
 
-Create `docs/adr/0003-intent-classification-strategy.md` deciding whether `IntentClassifier` stays or is replaced by `Intent\\Classifier\\ScorerRegistry` (and how weights/thresholds from `AgentWPConfig` apply); define extension points (filter/action to register scorers) and testing strategy; Acceptance Criteria: ADR names the primary classifier implementation and extension hook contract.
+Move `src/API/RestController.php` to the canonical controller namespace/path (e.g., `src/Rest/RestController.php`) and update all references/imports across controllers, providers, and tests. Keep behavior identical (permissions, nonce, rate limit, response_error, logging). Acceptance: PHPUnit passes and REST endpoints behave unchanged.
