--- a/.plans/C01-03.md
+++ b/.plans/C01-03.md
@@ -1,3 +1,3 @@
-# C01-03 — ADR 0004: OpenAI Client Architecture
+# C01-03 — Move HistoryController under Rest namespace
 
-Create `docs/adr/0004-openai-client-architecture.md` deciding whether to integrate the modular components in `src/AI/Client/*` into `OpenAIClient` or delete them, and whether HTTP + retries must go through `HttpClientInterface` + `RetryExecutor`; include migration steps and how streaming is handled; Acceptance Criteria: ADR makes an explicit choice and lists the concrete refactor steps.
+Move `src/API/HistoryController.php` into the canonical controller directory/namespace and update `src/Plugin/RestRouteRegistrar.php#getDefaultControllers()`, `src/Providers/RestServiceProvider.php` tagging/bindings, and tests referencing the old class. Acceptance: `/agentwp/v1/history` works and controller is discoverable via container tags.
