--- a/.plans/C01-04.md
+++ b/.plans/C01-04.md
@@ -1,3 +1,3 @@
-# C01-04 — ADR 0005: REST Rate Limiting Approach
+# C01-04 — Move ThemeController under Rest namespace
 
-Create `docs/adr/0005-rest-rate-limiting.md` choosing one rate limiting strategy: (A) injected `RateLimiterInterface` from container, or (B) static `RestController::check_rate_limit()` with no DI service; specify Retry-After behavior, storage keys, and how to test; Acceptance Criteria: ADR removes ambiguity so only one implementation remains after the migration.
+Move `src/API/ThemeController.php` into the canonical controller directory/namespace and update registrar/provider wiring and any tests/imports. Acceptance: `/agentwp/v1/theme` works and controller is discoverable via container tags.
