--- a/.plans/C01-05.md
+++ b/.plans/C01-05.md
@@ -1,3 +1,3 @@
-# C01-05 — Update Boot/Composition Docs
+# C01-05 — Clarify API vs infrastructure for RateLimiter implementation
 
-Update `docs/ARCHITECTURE.md` to include an explicit boot/composition diagram (bootstrap → Plugin → providers → route registrar/formatter → controllers → services/handlers) and link to ADRs 0001–0005 and `docs/ARCHITECTURE-IMPROVEMENT-PLAN.md`; Acceptance Criteria: A new contributor can trace runtime wiring end-to-end from docs without reading code.
+Decide where the rate limiter implementation should live (keep in `src/API/` with clear naming or move to an infrastructure-focused namespace like `src/Infrastructure/RateLimiting/`). Apply the move/rename (including namespaces) and update `src/Providers/RestServiceProvider.php` bindings and any imports. Acceptance: no functional changes; all tests pass.
