--- a/.plans/C02-01.md
+++ b/.plans/C02-01.md
@@ -1,3 +1,3 @@
-# C02-01 — Consolidate Plugin Bootstrap Responsibilities
+# C02-01 — Introduce AtomicRateLimiterInterface contract
 
-Audit `src/Plugin.php` for legacy/duplicate responsibilities vs `src/Plugin/*` managers and provider wiring; remove or deprecate unused methods (menu/assets/rest formatting) while keeping activation/deactivation behavior intact; Acceptance Criteria: only one active code path exists for menu/assets/rest wiring and dead/unused code is removed or explicitly deprecated.
+Add `src/Contracts/AtomicRateLimiterInterface.php` extending `RateLimiterInterface` with `checkAndIncrement(int $userId): bool`. Implement it in the real limiter class and keep backwards compatibility for `RateLimiterInterface` consumers. Acceptance: both interfaces compile and existing code continues to work.
