--- a/.plans/C02-02.md
+++ b/.plans/C02-02.md
@@ -1,3 +1,12 @@
-# C02-02 — Remove Stale References and Dead Imports
+# C02-02 — Prefer atomic rate limiting in RestController permissions_check
 
-Remove unused/stale imports (e.g., `HandlerServiceProvider` in `src/Plugin.php`) and resolve references to missing classes (e.g., guarded `AgentWP\\Handlers\\BulkHandler` usage): either implement the missing class or remove the references and any related cleanup logic; Acceptance Criteria: `rg \HandlerServiceProvider|BulkHandler\"` shows no invalid references and the plugin still boots/activates cleanly."
+Update the base REST controller rate limiting logic to call `checkAndIncrement()` when the resolved limiter implements `AtomicRateLimiterInterface`; otherwise fall back to `check()` + `increment()` (preserve fail-open semantics). Acceptance: rate limiting remains enforced and atomic path is used when available.
+
+## Status: DONE
+
+## Changes Made
+- Added `use AgentWP\Contracts\AtomicRateLimiterInterface` import
+- Updated `check_rate_limit_via_service()` to check if limiter implements `AtomicRateLimiterInterface`
+- When atomic interface is available, uses `checkAndIncrement()` for race-condition-free rate limiting
+- Falls back to `check()` + `increment()` for non-atomic limiters
+- Preserved fail-open semantics throughout
