--- a/.plans/C02-03.md
+++ b/.plans/C02-03.md
@@ -1,3 +1,3 @@
-# C02-03 — Single Source of Truth for Options + Defaults
+# C02-03 — Update FakeRateLimiter and tests for atomic path
 
-Choose one authoritative module for option keys/defaults (recommended: `src/Plugin/SettingsManager.php` + `AgentWPConfig`) and refactor `src/Plugin.php`, `src/Demo/Mode.php`, controllers, and services to use it; keep backward compatibility for stored option names; Acceptance Criteria: option keys/defaults are defined once and referenced everywhere else.
+Implement `checkAndIncrement()` in `tests/Fakes/FakeRateLimiter.php` and add/update unit tests to cover atomic behavior and fallback behavior (including `retry_after` propagation). Acceptance: tests validate correct 429 behavior and consistent retry-after values.
