--- a/.plans/C03-01.md
+++ b/.plans/C03-01.md
@@ -1,3 +1,3 @@
-# C03-01 — Make Controllers Container-First (Remove Broken Fallbacks)
+# C03-01 — Remove direct apply_filters/do_action calls from Intent Engine
 
-Refactor REST controllers to resolve dependencies from the container and remove any fallbacks that lead to incorrect runtime behavior (e.g., `new Engine()` that has no handlers); return a clear 500 error when a required dependency cannot be resolved; Acceptance Criteria: no core controller instantiates domain services directly in normal runtime.
+Refactor `src/Intent/Engine.php` to use an injected hook adapter (`src/Infrastructure/WPFunctions.php` or a dedicated `HooksInterface`) instead of calling `apply_filters()` / `do_action()` directly. Update `src/Providers/IntentServiceProvider.php` wiring and tests (use `tests/Fakes/FakeWPFunctions.php`). Acceptance: Engine remains behavior-compatible and is unit-testable without WordPress globals.
