--- a/.plans/C03-02.md
+++ b/.plans/C03-02.md
@@ -1,3 +1,3 @@
-# C03-02 — Refactor SettingsController to Use Services
+# C03-02 — Add current-user context abstraction for services (optional but recommended)
 
-Update `src/Rest/SettingsController.php` to use container-resolved services for settings, API key storage, and OpenAI key validation (via an injected HTTP client/validator); remove direct `wp_remote_get` calls and direct `new Encryption()` usage; Acceptance Criteria: settings and key operations are testable without WordPress HTTP globals.
+Introduce a small abstraction for runtime user context (e.g., `CurrentUserInterface` or a `WPFunctions::getCurrentUserId()` helper) and update services that call `get_current_user_id()` directly (audit logging/draft confirmation) to use injected context or explicit parameters. Acceptance: services no longer depend on WP globals for user identity and tests cover both paths.
