--- a/.plans/C03-03.md
+++ b/.plans/C03-03.md
@@ -1,3 +1,3 @@
-# C03-03 — Refactor AnalyticsController to Interface-Only
+# C03-03 — Deprecate legacy IntentClassifier and document migration
 
-Update `src/Rest/AnalyticsController.php` to resolve `AnalyticsServiceInterface` from the container and remove the concrete fallback instantiation; ensure provider wiring always registers the service; Acceptance Criteria: analytics endpoint never bypasses DI in production.
+Add explicit deprecation markers for `src/Intent/IntentClassifier.php` (DocBlock `@deprecated` and/or `_doing_it_wrong` on construction) and ensure production code does not use it. Update ADR 0003 and `docs/ARCHITECTURE-IMPROVEMENT-PLAN.md` notes to reflect deprecation/removal timing. Acceptance: no runtime behavior change and deprecation is clearly communicated.
