--- a/.plans/C04-01.md
+++ b/.plans/C04-01.md
@@ -1,3 +1,3 @@
-# C04-01 — Add HandlesIntent Attributes to Built-in Handlers
+# C04-01 — Decide tool execution architecture and document it
 
-Add `#[HandlesIntent(...)]` attributes to all built-in intent handlers in `src/Intent/Handlers/*` so each handler has explicit intent registration; Acceptance Criteria: `Engine` can register all built-in handlers without relying on legacy detection methods.
+Pick a single approach for tools: (A) executable tool classes (schema + execute) with a dispatcher, or (B) central argument normalizers/executors. Document the chosen approach (short ADR in `docs/adr/` + update `docs/ARCHITECTURE.md`). Acceptance: contributors have one clear recipe for adding a tool.
