--- a/.plans/C04-03.md
+++ b/.plans/C04-03.md
@@ -1,3 +1,29 @@
-# C04-03 — Remove O(n) Fallback Handler Resolution
+# C04-03 — Introduce ToolDispatcher service and integrate with AbstractAgenticHandler
 
-Once all built-in handlers are attribute-registered, simplify `src/Intent/Engine.php` to rely on `HandlerRegistry` only (remove `needs_fallback_lookup` and linear scanning) and keep a single fallback handler for unknown intents; Acceptance Criteria: handler resolution is O(1) and deterministic.
+Create a dispatcher (e.g., `src/Intent/ToolDispatcher.php` + contract) that resolves tools by name, validates args, executes, and returns JSON-safe results. Refactor `src/Intent/Handlers/AbstractAgenticHandler.php` to delegate tool execution to the dispatcher instead of requiring per-handler `execute_tool()` implementations. Acceptance: agentic loop still functions and tool execution is centralized.
+
+## Implementation Complete
+
+### New Files
+- `src/Contracts/ToolDispatcherInterface.php` - Contract for centralized tool execution dispatch
+- `src/Intent/ToolDispatcher.php` - Implementation of the dispatcher service
+- `tests/Unit/Intent/ToolDispatcherTest.php` - Unit tests for ToolDispatcher
+
+### Modified Files
+- `src/Intent/Handlers/AbstractAgenticHandler.php` - Refactored to use ToolDispatcher; handlers now implement `registerToolExecutors()` instead of `execute_tool()`
+- `src/Intent/Handlers/OrderStatusHandler.php` - Updated to use registerToolExecutors pattern
+- `src/Intent/Handlers/OrderRefundHandler.php` - Updated to use registerToolExecutors pattern
+- `src/Intent/Handlers/ProductStockHandler.php` - Updated to use registerToolExecutors pattern
+- `src/Intent/Handlers/EmailDraftHandler.php` - Updated to use registerToolExecutors pattern
+- `src/Intent/Handlers/AnalyticsQueryHandler.php` - Updated to use registerToolExecutors pattern
+- `src/Intent/Handlers/CustomerLookupHandler.php` - Updated to use registerToolExecutors pattern
+- `src/Intent/Handlers/OrderSearchHandler.php` - Updated to use registerToolExecutors pattern
+
+### Architecture Changes
+1. **ToolDispatcherInterface** - Defines `register()`, `registerMany()`, `has()`, and `dispatch()` methods
+2. **ToolDispatcher** - Centralizes tool execution with:
+   - Tool registration via callables
+   - Argument validation against JSON schemas from ToolRegistry
+   - JSON-safe result handling (wraps non-arrays, handles encoding errors)
+3. **AbstractAgenticHandler** - No longer implements `ToolExecutorInterface`; delegates all tool calls to `ToolDispatcher.dispatch()`
+4. **Concrete Handlers** - Implement `registerToolExecutors()` to register their tools via closures that capture `$this->service`
