--- a/.plans/C04-04.md
+++ b/.plans/C04-04.md
@@ -1,3 +1,3 @@
-# C04-04 — Implement ScorerRegistry-Based Classifier
+# C04-04 — Convert order-related functions into executable tools
 
-Create an `IntentClassifierInterface` implementation backed by `src/Intent/Classifier/ScorerRegistry` and wire it in `IntentServiceProvider` (per ADR 0003); add an action/filter to register additional scorers; Acceptance Criteria: classification is extensible and covered by unit tests.
+Implement executable tools for order operations (`search_orders`, `prepare_refund`, `confirm_refund`, `prepare_status_update`, `prepare_bulk_status_update`, `confirm_status_update`, `bulk_update`) that call the appropriate domain services and return stable result payloads. Register tools via container/registry and update handlers to only declare required tool names. Acceptance: existing intent flows still work end-to-end.
