--- a/.plans/C04-05.md
+++ b/.plans/C04-05.md
@@ -1,3 +1,3 @@
-# C04-05 — Align Scoring with Config Weights/Thresholds
+# C04-05 — Convert product/email/analytics/customer functions into executable tools
 
-Update scorers to incorporate `AgentWPConfig` weights/thresholds (or filtered config), and ensure tie-breaking/determinism; Acceptance Criteria: classifier behavior is deterministic and configurable via filters.
+Implement executable tools for the remaining functions (`search_product`, `prepare_stock_update`, `confirm_stock_update`, `draft_email`, `get_sales_report`, `get_customer_profile`) with DI wiring and stable result shapes. Acceptance: all built-in tool names resolve and execute through the dispatcher.
