--- a/.plans/C05-03.md
+++ b/.plans/C05-03.md
@@ -1,3 +1,3 @@
-# C05-03 — Centralize Retry via RetryExecutor
+# C05-03 — Standardize transient prefixes and cache key conventions
 
-Replace custom retry/backoff logic in `OpenAIClient` with `RetryExecutor` + `RetryPolicyInterface` and `SleeperInterface`; ensure retry-after and 429 handling are consistent; Acceptance Criteria: retry behavior is centrally configured and unit-testable.
+Audit uses of `Plugin::TRANSIENT_PREFIX`, `AgentWPConfig::CACHE_PREFIX_*`, and ad-hoc transient keys (REST log, caches). Standardize on one convention and refactor accordingly; ensure uninstall/deactivation cleanup still removes all plugin transients. Acceptance: cache keys are predictable and cleanup remains complete.
