--- a/.plans/C05-04.md
+++ b/.plans/C05-04.md
@@ -1,3 +1,3 @@
-# C05-04 — Centralize OpenAI Configuration
+# C05-04 — Expose frontend runtime config via agentwpSettings
 
-Ensure base URL, timeouts, retry limits, and model selection are pulled from SettingsManager/config + filter overrides (and not hardcoded across multiple places); Acceptance Criteria: OpenAI configuration is defined once and applied consistently.
+Extend `src/Plugin/AssetManager.php#getScriptLocalization()` to expose `apiNamespace` and any other runtime constants the frontend should not hardcode (optionally max turns / limits). Update React to consume these values. Acceptance: React does not duplicate critical server constants.
