--- a/.plans/C06-01.md
+++ b/.plans/C06-01.md
@@ -1,3 +1,3 @@
-# C06-01 — Single Rate Limiting Implementation in REST Layer
+# C06-01 — Automate OpenAPI → TypeScript generation verification
 
-Implement the single rate limiting approach chosen in ADR 0005: either inject `RateLimiterInterface` into `RestController` (and remove static limiting) or remove the DI rate limiter and keep static; ensure Retry-After is surfaced in responses; Acceptance Criteria: only one rate limiting mechanism exists and is covered by tests.
+Ensure `react/src/types/api.ts` is generated from `docs/openapi.json` deterministically; add/verify a `react` script (e.g., `npm run generate:types`) and add a verification step (CI or local script) that fails when generated types are stale. Document in `docs/DEVELOPER.md`. Acceptance: type generation drift is caught automatically.
