--- a/.plans/C06-02.md
+++ b/.plans/C06-02.md
@@ -1,3 +1,3 @@
-# C06-02 — Tag-Based REST Controller Registration
+# C06-02 — Add contributor checklists for endpoints/intents/tools
 
-Refactor `src/Plugin/RestRouteRegistrar.php` and `src/Providers/RestServiceProvider.php` so controller discovery prefers container tag `rest.controller` (with a safe fallback list only when needed); Acceptance Criteria: adding a controller does not require editing a hard-coded list.
+Update `docs/DEVELOPER.md` with short checklists for adding a REST endpoint (ADR 0001 + DTO validation ADR 0007), adding an intent handler (ADR 0002), and adding a tool (Phase 4 decision). Include reminders to update `docs/EXTENSIONS.md` when introducing hooks. Acceptance: contributor docs provide step-by-step recipes.
