--- a/.plans/C06-03.md
+++ b/.plans/C06-03.md
@@ -1,3 +1,3 @@
-# C06-03 — Introduce Request Validation/DTO Helpers (Minimum Viable)
+# C06-03 — Document and enforce Definition of Done for architecture changes
 
-Create minimal request DTO/validator helpers to reduce controller boilerplate (start with `/intent` and `/settings`), while keeping WP REST schema validation; Acceptance Criteria: controllers become thinner without changing API behavior.
+Add an 'Architecture change DoD' section to `docs/DEVELOPER.md` requiring relevant checks (PHPUnit, PHPCS, PHPStan, React tests where applicable) and documentation updates. Optionally add a convenience script to run the full suite. Acceptance: architecture work has a consistent quality gate.
